--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Curso de GitHub</h1>
+    <ul>
+        <li>Item 01</li>
+        <li>Item 03</li>
+    </ul>
+    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam iure corrupti, cupiditate quos facere, aut voluptas quas hic dolores distinctio ullam eos id. Molestiae, facere pariatur ratione commodi illo incidunt?</p>
 </body>
 </html>
