Commit desde GitHub

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>Curso de GitHub</h1>
+    <h1>Curso de Git & GitHub</h1>
     <ul>
         <li>Item 01</li>
         <li>Item 03</li>
